# supervisor-worker_agents

./: .env.example  .gitignore  LICENSE  README.md  db_client.py  logging_config.py  main.py  pyproject.toml
llm_config/: README.md  character_creator_agent.yml  director_agent.yml  executive_producer_agent.yml  main.py  scene_planner_agent.yml  screenwriter_agent.yml  story_generator_agent.yml
resources/character_creator_agent_resource/: main.py
resources/director_agent_resource/: main.py
resources/director_agent_resource/tools/: __init__.py  scene_planner_agent_tool.py
resources/executive_producer_agent/: main.py  state_declaration.py
resources/executive_producer_agent/tools/: director_agent_tool.py  screenwriter_agent_tool.py
resources/executive_producer_agent_resource/: main.py
resources/executive_producer_agent_resource/tools/: __init__.py  director_agent_tool.py  screenwriter_agent_tool.py
resources/scene_planner_agent_resource/: main.py
resources/screenwriter_agent/: main.py
resources/screenwriter_agent/tools/: __init__.py  story_generator_agent_tool.py
resources/screenwriter_agent_resource/: main.py
resources/screenwriter_agent_resource/tools/: character_creator_agent_tool.py  story_generator_agent_tool.py
resources/story_generator_agent_resource/: main.py
resources/utils/: context_isolation.py  handle_messages.py  state_declaration.py  store_connections.py  subagent_tracking.py  subagent_visualization.py  thread_locks.py
