[project]
name = "supervisor-worker-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "langchain>=1.3.7",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
]
